<resources>
    <string name="app_name">Smynd</string>
    <string name="shared_pref_name">Shuffler</string>
    <string name="action_settings">Settings</string>

    <string name="Font_Montserrat_Light">Montserrat-Light</string>
    <string name="Font_Montserrat_Regular">Montserrat-Regular</string>
    <string name="Font_Montserrat_SemiBold">Montserrat-SemiBold</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="search_editText">Search…</string>
    <string name="my_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_library">Your Library</string>
    <string name="dummy_song_text">Young Dumb &amp; Broke \u2022 Khalid \u2022 American Teen</string>
    <string name="dummy_song_name">Be Your Love</string>
    <string name="dummy_song_artist">Bishop Briggs</string>
    <string name="playing_from">PLAYING FROM</string>
    <string name="playing_from_playlist">Daily Mix</string>
    <string name="songs">Songs</string>
    <string name="footer_text">See all songs</string>
    <string name="user_followers">2,695,760 FOLLOWERS</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="go_to_artist_profile">Go to Artist Profile</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="time">3:31</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_recent_searches">Clear recent searches</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>

    <string name="simple_image_transition">simple_image_transition</string>
    <string name="create_playlist_message">Create Playlist</string>
    <string name="create_playlist_hint_message">Enter your playlist name...</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="play_all">Play All</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete">DELETE</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="new_playlist">+ New Playlist...</string>
    <string name="your_playlists">YOUR PLAYLISTS</string>
    <string name="shuffle_play">SHUFFLE PLAY</string>
    <string name="no_playlist_message">You do not have any playlists yet. Create one now.</string>
    <string name="no_search_history_message">It\'s pretty quiet in here. Search something above.</string>
    <string name="no_internet_connection_message">No Internet connection. Try again when you are connected to the Internet.</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="playback_channel_name">channelName</string>
</resources>
